working on benchmark, inserted padding

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "pngutils.h": "c",
-        "matrix.h": "c"
+        "matrix.h": "c",
+        "getopt.h": "c"
     }
 }
