--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
     "files.associations": {
         "pngutils.h": "c",
         "matrix.h": "c",
-        "getopt.h": "c"
+        "getopt.h": "c",
+        "cmath": "cpp",
+        "random": "cpp",
+        "*.tcc": "cpp"
     }
 }
